[tool.poetry]
name = "siesta-sup"
version = "0.1.0"
description = ""
authors = ["Leonid3# <116304748+fenrisis@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
alembic = "^1.13.1"
pydantic = "^2.6.2"
pytest-asyncio = "^0.23.5"
aiosqlite = "^0.20.0"
sqlalchemy = "^2.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
